--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,9 @@
 export("%>%")
 export(compute_grid_cells)
 export(get_walking)
+export(plot_grid_cells)
+importFrom(dplyr,across)
+importFrom(dplyr,contains)
 importFrom(dplyr,count)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
@@ -16,7 +19,18 @@ importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,sym)
 importFrom(dplyr,ungroup)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,facet_grid)
+importFrom(ggplot2,geom_rect)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_classic)
 importFrom(magrittr,"%>%")
 importFrom(purrr,map_dfr)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_wider)
+importFrom(tidyr,separate_wider_delim)
+importFrom(utils,tail)
+importFrom(viridis,scale_fill_viridis)
