--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,8 +25,10 @@ Imports:
     assertthat,
     data.table,
     dplyr,
+    ggplot2,
     lubridate,
     magrittr,
     parallelly,
     purrr,
-    tidyr
+    tidyr,
+    viridis
