add another plot fn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,9 @@
 export("%>%")
 export(compute_grid_cells)
 export(get_walking)
+export(plot_fingerprints)
 export(plot_grid_cells)
+importFrom(MASS,kde2d)
 importFrom(dplyr,across)
 importFrom(dplyr,contains)
 importFrom(dplyr,count)
@@ -20,9 +22,12 @@ importFrom(dplyr,select)
 importFrom(dplyr,sym)
 importFrom(dplyr,ungroup)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,element_blank)
 importFrom(ggplot2,facet_grid)
+importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_rect)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
@@ -33,4 +38,5 @@ importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,separate_wider_delim)
 importFrom(utils,tail)
+importFrom(viridis,scale_color_viridis)
 importFrom(viridis,scale_fill_viridis)
